fix(web-components): adds z-index value for toasts
adds z-index token to ensure toasts overlay other components

523

--- a/packages/web-components/src/global/variables.css
+++ b/packages/web-components/src/global/variables.css
@@ -288,6 +288,7 @@
   --ic-z-index-navigation-menu: calc(var(--ic-z-index-base-value) + 60);
   --ic-z-index-side-navigation: calc(var(--ic-z-index-base-value) + 60);
   --ic-z-index-dialog: calc(var(--ic-z-index-base-value) + 100);
+  --ic-z-index-toast: calc(var(--ic-z-index-base-value) + 110);
   --ic-z-index-tooltip: calc(var(--ic-z-index-base-value) + 110);
   --ic-z-index-classification-banner: calc(var(--ic-z-index-base-value) + 200);
 }
